dev/plugin-guide/3.3/en/examples.md
---
title: Examples - Plugin Guide for OJS and OMP
book: dev-plugin-guide
version: 3.3
---

# Examples

Plugins can be put to a wide variety of uses. The examples below show you how to do things that many plugins may need to do.

- [Plugin Template](https://github.com/pkp/pluginTemplate){:target="_blank"} - A working starter plugin that you can use as a base for your own plugins.
- [Add Styles and Scripts](./examples-styles-scripts) - How to add a CSS stylesheet or JavaScript file to the backend.
- [Context and Site](./examples-context-site) - How to distinguish between one journal and the admin area in your plugin.
- [Get Data](./examples-get-data) - How to get some data to display in your plugin.
- [Get Data from the Template Manager](./examples-get-data-template) - How to read data that has been assigned to a template when you hook into the template.
- [Add Custom Fields](./examples-custom-field) - How to modify an existing settings form to add a new setting.
- [Add Custom Page](./examples-custom-page) - How to create a custom page with it's own URL and load it in the backend.
